tests/NormalTests/paczka1/fuzzy1/68024224.err
Error in line 5: faOodl2Zh S767 64,5
Error in line 14: VENkgvFm S767 2,2
Error in line 20: VENkgvFm A629 53,4
Error in line 24: VENkgvFm A572 25,0
Error in line 25: VENkgvFm A629 69,1
Error in line 27: S767 A629 58,5
